# StringMatching

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  stringmatching.sh
.github/workflows/: cmake.yml
examples/: dna-100000.txt
include/: algos.h  functions.h
src/: algos.cpp  functions.cpp  string_matching.cpp
test/: algos.cpp
